syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.orangetalents";
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.orangetalents;

service KeyManagerGrpcService {
  rpc registraChavePix(ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoDeConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoDeChave {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIO = 4;
}

message ChavePixRequest {
  string codigoCliente = 1;
  TipoDeChave tipoChave = 2;
  string chave = 3;
  TipoDeConta tipoConta = 4;
}

message ChavePixResponse {
  string pixId = 1;
}